[package]
name = "uri-rs"
version = "0.0.1"
description = "A Rust crate for URI"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["uri", "identifier"]
categories = ["data-structures","encoding","parsing","value-formatting"]
readme = "./README.md"
repository = "https://github.com/j5ik2o/uri-rs"

[badges]
github = { repository = "j5ik2o/uri-rs", workflow = "Rust" }

[features]
default = ["serde"]

[dependencies]
log = "0.4.14"
percent-encoding = "2.1.0"
once_cell = "1.8.0"
itertools = "0.10.1"
nom = "7.0.0"
typed-builder = "0.9.0"
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3.5"
prop-check-rs = "0.0.4"
anyhow = "1.0.43"
env_logger = "0.9.0"

[[bench]]
name = "bench_main"
harness = false
